fix bug where clicking TOC links collapsed the TOC

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -39,7 +39,7 @@ $headings-font-weight: 400;
 
 /* ==================================================================== */
 /* Navbar */
-$navbar-padding-y: $spacer / 2;
+$navbar-padding-y: $spacer;
 $navbar-padding-x: $spacer * 2;
 $navbar-brand-font-size: $font-size-base;
 $navbar-brand-weight: 700;
