--- a/src/templates/CaseStudy.module.scss
+++ b/src/templates/CaseStudy.module.scss
@@ -8,7 +8,7 @@
 
 /* Title container */
 .head {
-    margin-bottom: 2rem;
+    margin-bottom: 60px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
